<resources>
    <string name="app_name">FragmentNavigation</string>
    <string name="default_toolbar_label">Fragment Navigation Example</string>
    <string name="open_box">Open Box</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="application_name">Application Name:</string>
    <string name="about_the_application">About the Application</string>
    <string name="version_name">Version Name:</string>
    <string name="box">Box</string>
    <string name="please_select_a_box">Please select a box</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="select_the_number_of_boxes">Select the number of boxes:</string>
    <string name="enable_timer">Enable timer</string>
    <string name="box_title">Box #%1$d</string>
    <string name="empty_box">This box is empty. Try another one.</string>
    <string name="done_icon">Done icon</string>
    <string name="congratilations">Congratilations!</string>
    <string name="to_main_menu">To Main Menu</string>
    <string name="timer_text">Timer: %1$d sec.</string>
    <string name="the_end">The end</string>
    <string name="timer_end_message">Oops, there is no enough time, try again.</string>
    <string name="select_box">Select Box</string>
    <string name="done">Done</string>

    <plurals name="boxes">
        <item quantity="zero">%1$d boxes</item>
        <item quantity="one">%1$d box</item>
        <item quantity="two">%1$d boxes</item>
        <item quantity="few">%1$d boxes</item>
        <item quantity="many">%1$d boxes</item>
        <item quantity="other">%1$d boxes</item>
    </plurals>
</resources>