<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/beginGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aboutContainer"
        style="@style/Form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintStart_toStartOf="@id/beginGuideLine"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/FormHintTextView"
            android:text="@string/about_the_application"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appNameHintTextView"
            style="@style/HintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/versionNameHintTextView"
            style="@style/HintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appNameHintTextView" />

        <TextView
            android:id="@+id/versionCodeHintTextView"
            style="@style/HintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/versionNameHintTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="end"
            app:constraint_referenced_ids="appNameHintTextView,versionNameHintTextView,versionCodeHintTextView" />

        <TextView
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_toolbar_label"
            app:layout_constraintBaseline_toBaselineOf="@id/appNameHintTextView"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/versionNameTextView"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/versionNameHintTextView"
            app:layout_constraintStart_toEndOf="@id/barrier"
            tools:text="1.0.0" />

        <TextView
            android:id="@+id/versionCodeTextView"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/versionCodeHintTextView"
            app:layout_constraintStart_toEndOf="@id/barrier"
            tools:text="1" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@android:string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/versionCodeHintTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>